@@ -1,3 +1,5 @@
 sandbox
 \.metadata
 \.svn
+^.*\.Rproj$
+^\.Rproj\.user$
