@@ -34,8 +34,8 @@
 #' @rdname update_instruments.iShares
 update_instruments.iShares <- function(Symbols, silent=FALSE) {
   tmp <- tempfile()
-  lnk <- paste0("http://us.ishares.com/product_info/fund/excel_returns.htm",
-                "?assetClassCd=EQ&ticker=&asofDt=")
+  lnk <- paste("http://us.ishares.com/product_info/fund/excel_returns.htm",
+                "?assetClassCd=EQ&ticker=&asofDt=", sep="")
   download.file(lnk, destfile=tmp, quiet=TRUE)
   fr <- read.csv(tmp, skip=3, stringsAsFactors=FALSE, header=FALSE)
   colnames(fr) <- read.delim(text=readLines(tmp, 1), sep=",", header=FALSE, 
@@ -75,8 +75,9 @@ update_instruments.iShares <- function(Symbols, silent=FALSE) {
 #' @rdname update_instruments.iShares
 update_instruments.SPDR <- function(Symbols, silent=FALSE) {
   tmp <- tempfile()
-  lnk <- paste0("https://www.spdrs.com/library-content/public/public-files/etf",
-                "nav.csv?docname=Most+Recent+Net+Asset+Values&onyx_code1=1299")
+  lnk <- paste("https://www.spdrs.com/library-content/public/public-files/etf",
+                "nav.csv?docname=Most+Recent+Net+Asset+Values&onyx_code1=1299",
+               sep="")
   download.file(lnk, destfile=tmp, method="curl")
   fr <- read.csv(tmp, skip=1, stringsAsFactors=FALSE)
   DATE <- gsub(" ", "", sub("DATE,", "", readLines(tmp, 1)))
